--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
+    "nanoid": "^5.1.6",
     "next": "^15.5.9",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -77,7 +78,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "drizzle-kit": "^0.18.1",
+    "drizzle-kit": "^0.31.8",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4",
