--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react": "^19.0.0",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.69.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^4.0.15",
